// Copyright 2015, Google Inc.
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of Google Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.chat";
option java_outer_classname = "ChatServiceProto";
option objc_class_prefix = "HLW";

package chat;

// The greeting service definition.
service Chatter {
  rpc createUsername (mName) returns (mString) {}
  rpc SendMessage (ChatRequest) returns (ChatReply) {}
  rpc joinGroup (mNameGroup) returns (mBoolean) {}
  rpc leaveGroup (mNameGroup) returns (mBoolean) {}
  rpc sendMessages (mNameGroupMsg) returns (mBoolean) {}
  rpc getMessage (mName) returns (mString) {}
}

// The request message containing the user's name.
message ChatRequest {
  string name = 1;
  string message = 2;
}

// The response message containing the greetings
message ChatReply {
  string message = 1;
}

message mString {
  string value = 1;
}

message mBoolean {
  bool value = 1;
}

message mName {
  string name = 1;
}

message mNameGroup {
  string name = 1;
  string group = 2;
}

message mNameGroupMsg {
  string name = 1;
  string group = 2;
  string message = 3;
}

